{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 1136,
  "lineage": "554aca94-1b00-0f50-6a10-be6a517357f6",
  "resources": [
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/mento-prod/regions/us-central1/networkEndpointGroups/minipay-external-api",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2024-07-26T14:10:31.644-07:00",
            "enable_cdn": false,
            "fingerprint": "AdzVFwt4n2U=",
            "generated_id": 5432721835358268968,
            "id": "projects/mento-prod/global/backendServices/minipay-lb-backend-default",
            "load_balancing_scheme": "EXTERNAL",
            "name": "minipay-lb-backend-default",
            "port_name": "http",
            "project": "mento-prod",
            "protocol": "HTTP",
            "security_policy": "https://www.googleapis.com/compute/beta/projects/mento-prod/global/securityPolicies/minipay-api-cloud-armour",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mento-prod/global/backendServices/minipay-lb-backend-default",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_region_network_endpoint_group.external_endpoint_group",
            "google_redis_instance.database",
            "google_vpc_access_connector.connector",
            "module.build.data.archive_file.source",
            "module.build.data.external.git",
            "module.build.null_resource.build_and_pack",
            "module.build.null_resource.unpack",
            "module.build.random_id.build_id",
            "module.external_cf.google_cloudfunctions2_function.function",
            "module.external_cf.google_storage_bucket.source",
            "module.external_cf.google_storage_bucket_object.source",
            "module.external_cf.random_id.bucket",
            "module.security_policy.google_compute_security_policy.policy"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.54.26.112",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-07-26T14:09:09.132-07:00",
            "id": "projects/mento-prod/global/addresses/minipay-lb-address",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "minipay-lb-address",
            "prefix_length": 0,
            "project": "mento-prod",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mento-prod/global/addresses/minipay-lb-address"
          }
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allow_psc_global_access": false,
            "id": "projects/mento-prod/global/forwardingRules/minipay-lb",
            "ip_address": "34.54.26.112",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "minipay-lb",
            "port_range": "80-80",
            "project": "mento-prod",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mento-prod/global/forwardingRules/minipay-lb",
            "target": "https://www.googleapis.com/compute/beta/projects/mento-prod/global/targetHttpProxies/minipay-lb-http-proxy"
          },
          "dependencies": [
            "google_compute_region_network_endpoint_group.external_endpoint_group",
            "google_redis_instance.database",
            "google_vpc_access_connector.connector",
            "module.build.data.archive_file.source",
            "module.build.data.external.git",
            "module.build.null_resource.build_and_pack",
            "module.build.null_resource.unpack",
            "module.build.random_id.build_id",
            "module.external_cf.google_cloudfunctions2_function.function",
            "module.external_cf.google_storage_bucket.source",
            "module.external_cf.google_storage_bucket_object.source",
            "module.external_cf.random_id.bucket",
            "module.lb-http.google_compute_backend_service.default",
            "module.lb-http.google_compute_global_address.default",
            "module.lb-http.google_compute_target_http_proxy.default",
            "module.lb-http.google_compute_url_map.default",
            "module.lb-http.google_compute_url_map.https_redirect",
            "module.security_policy.google_compute_security_policy.policy"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allow_psc_global_access": false,
            "id": "projects/mento-prod/global/forwardingRules/minipay-lb-https",
            "ip_address": "34.54.26.112",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "minipay-lb-https",
            "port_range": "443-443",
            "project": "mento-prod",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mento-prod/global/forwardingRules/minipay-lb-https",
            "target": "https://www.googleapis.com/compute/beta/projects/mento-prod/global/targetHttpsProxies/minipay-lb-https-proxy"
          },
          "dependencies": [
            "google_compute_region_network_endpoint_group.external_endpoint_group",
            "google_redis_instance.database",
            "google_vpc_access_connector.connector",
            "module.build.data.archive_file.source",
            "module.build.data.external.git",
            "module.build.null_resource.build_and_pack",
            "module.build.null_resource.unpack",
            "module.build.random_id.build_id",
            "module.external_cf.google_cloudfunctions2_function.function",
            "module.external_cf.google_storage_bucket.source",
            "module.external_cf.google_storage_bucket_object.source",
            "module.external_cf.random_id.bucket",
            "module.lb-http.google_compute_backend_service.default",
            "module.lb-http.google_compute_global_address.default",
            "module.lb-http.google_compute_managed_ssl_certificate.default",
            "module.lb-http.google_compute_ssl_certificate.default",
            "module.lb-http.google_compute_target_https_proxy.default",
            "module.lb-http.google_compute_url_map.default",
            "module.lb-http.random_id.certificate",
            "module.security_policy.google_compute_security_policy.policy"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-07-26T14:11:27.192-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/mento-prod/global/targetHttpProxies/minipay-lb-http-proxy",
            "name": "minipay-lb-http-proxy",
            "project": "mento-prod",
            "proxy_bind": false,
            "proxy_id": 5736390737743425040,
            "self_link": "https://www.googleapis.com/compute/v1/projects/mento-prod/global/targetHttpProxies/minipay-lb-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/mento-prod/global/urlMaps/minipay-lb-https-redirect"
          },
          "dependencies": [
            "google_compute_region_network_endpoint_group.external_endpoint_group",
            "google_redis_instance.database",
            "google_vpc_access_connector.connector",
            "module.build.data.archive_file.source",
            "module.build.data.external.git",
            "module.build.null_resource.build_and_pack",
            "module.build.null_resource.unpack",
            "module.build.random_id.build_id",
            "module.external_cf.google_cloudfunctions2_function.function",
            "module.external_cf.google_storage_bucket.source",
            "module.external_cf.google_storage_bucket_object.source",
            "module.external_cf.random_id.bucket",
            "module.lb-http.google_compute_backend_service.default",
            "module.lb-http.google_compute_url_map.default",
            "module.lb-http.google_compute_url_map.https_redirect",
            "module.security_policy.google_compute_security_policy.policy"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-07-26T14:11:27.245-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/mento-prod/global/targetHttpsProxies/minipay-lb-https-proxy",
            "name": "minipay-lb-https-proxy",
            "project": "mento-prod",
            "proxy_bind": false,
            "proxy_id": 7075809983019462160,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mento-prod/global/targetHttpsProxies/minipay-lb-https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/mento-prod/global/sslCertificates/minipay-lb-cert"
            ],
            "tls_early_data": "DISABLED",
            "url_map": "https://www.googleapis.com/compute/v1/projects/mento-prod/global/urlMaps/minipay-lb-url-map"
          },
          "dependencies": [
            "google_compute_region_network_endpoint_group.external_endpoint_group",
            "google_redis_instance.database",
            "google_vpc_access_connector.connector",
            "module.build.data.archive_file.source",
            "module.build.data.external.git",
            "module.build.null_resource.build_and_pack",
            "module.build.null_resource.unpack",
            "module.build.random_id.build_id",
            "module.external_cf.google_cloudfunctions2_function.function",
            "module.external_cf.google_storage_bucket.source",
            "module.external_cf.google_storage_bucket_object.source",
            "module.external_cf.random_id.bucket",
            "module.lb-http.google_compute_backend_service.default",
            "module.lb-http.google_compute_managed_ssl_certificate.default",
            "module.lb-http.google_compute_ssl_certificate.default",
            "module.lb-http.google_compute_url_map.default",
            "module.lb-http.random_id.certificate",
            "module.security_policy.google_compute_security_policy.policy"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-07-26T14:11:15.458-07:00",
            "default_custom_error_response_policy": [],
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/mento-prod/global/backendServices/minipay-lb-backend-default",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "MA5aadr4uVU=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/mento-prod/global/urlMaps/minipay-lb-url-map",
            "map_id": 8087928921926512156,
            "name": "minipay-lb-url-map",
            "path_matcher": [],
            "project": "mento-prod",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mento-prod/global/urlMaps/minipay-lb-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_region_network_endpoint_group.external_endpoint_group",
            "google_redis_instance.database",
            "google_vpc_access_connector.connector",
            "module.build.data.archive_file.source",
            "module.build.data.external.git",
            "module.build.null_resource.build_and_pack",
            "module.build.null_resource.unpack",
            "module.build.random_id.build_id",
            "module.external_cf.google_cloudfunctions2_function.function",
            "module.external_cf.google_storage_bucket.source",
            "module.external_cf.google_storage_bucket_object.source",
            "module.external_cf.random_id.bucket",
            "module.lb-http.google_compute_backend_service.default",
            "module.security_policy.google_compute_security_policy.policy"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "https_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-07-26T14:09:09.232-07:00",
            "default_route_action": [],
            "default_service": "",
            "default_url_redirect": [
              {
                "host_redirect": "",
                "https_redirect": true,
                "path_redirect": "",
                "prefix_redirect": "",
                "redirect_response_code": "MOVED_PERMANENTLY_DEFAULT",
                "strip_query": false
              }
            ],
            "description": "",
            "fingerprint": "OckHjvKaPUg=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/mento-prod/global/urlMaps/minipay-lb-https-redirect",
            "map_id": 8658904391107587738,
            "name": "minipay-lb-https-redirect",
            "path_matcher": [],
            "project": "mento-prod",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mento-prod/global/urlMaps/minipay-lb-https-redirect",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.security_policy",
      "mode": "managed",
      "type": "google_compute_security_policy",
      "name": "policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "adaptive_protection_config": [
              {
                "auto_deploy_config": [],
                "layer_7_ddos_defense_config": [
                  {
                    "enable": true,
                    "rule_visibility": "STANDARD"
                  }
                ]
              }
            ],
            "advanced_options_config": [
              {
                "json_custom_config": [
                  {
                    "content_types": []
                  }
                ],
                "json_parsing": "STANDARD",
                "log_level": "VERBOSE",
                "user_ip_request_headers": []
              }
            ],
            "description": "MiniPay API Cloud Armor security policy with preconfigured rules, security rules and custom rules",
            "fingerprint": "X1snqJwEhfg=",
            "id": "projects/mento-prod/global/securityPolicies/minipay-api-cloud-armour",
            "name": "minipay-api-cloud-armour",
            "project": "mento-prod",
            "recaptcha_options_config": [],
            "rule": [
              {
                "action": "deny(403)",
                "description": "Default rule, higher priority overrides it",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "expr_options": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 2147483647,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "deny(502)",
                "description": "Deny specific Regions",
                "header_action": [],
                "match": [
                  {
                    "config": [],
                    "expr": [
                      {
                        "expression": "'[US]'.contains(origin.region_code)\n"
                      }
                    ],
                    "expr_options": [],
                    "versioned_expr": ""
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 21,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "deny(502)",
                "description": "PHP Sensitivity Level 0 with included rules",
                "header_action": [],
                "match": [
                  {
                    "config": [],
                    "expr": [
                      {
                        "expression": "evaluatePreconfiguredWaf('php-v33-stable', {'sensitivity': 0, 'opt_in_rule_ids': ['owasp-crs-v030301-id933190-php','owasp-crs-v030301-id933111-php']})"
                      }
                    ],
                    "expr_options": [],
                    "versioned_expr": ""
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 3,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "deny(502)",
                "description": "XSS Sensitivity Level 2 with excluded rules",
                "header_action": [],
                "match": [
                  {
                    "config": [],
                    "expr": [
                      {
                        "expression": "evaluatePreconfiguredWaf('xss-v33-stable', {'sensitivity': 2, 'opt_out_rule_ids': ['owasp-crs-v030301-id941380-xss','owasp-crs-v030301-id941280-xss']})"
                      }
                    ],
                    "expr_options": [],
                    "versioned_expr": ""
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": true,
                "priority": 2,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "deny(502)",
                "description": "sqli-v33-stable Sensitivity Level 4 and 2 preconfigured_waf_config_exclusions",
                "header_action": [],
                "match": [
                  {
                    "config": [],
                    "expr": [
                      {
                        "expression": "evaluatePreconfiguredWaf('sqli-v33-stable', {'sensitivity': 4})"
                      }
                    ],
                    "expr_options": [],
                    "versioned_expr": ""
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 1,
                "rate_limit_options": [],
                "redirect_options": []
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/mento-prod/global/securityPolicies/minipay-api-cloud-armour",
            "timeouts": null,
            "type": "CLOUD_ARMOR"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}